--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 		"eslint-plugin-prettier": "^4.0.0",
 		"eslint-plugin-react": "^7.25.1",
 		"eslint-plugin-react-hooks": "^1.7.0",
+		"jest": "^27.2.0",
 		"prettier": "^2.3.2"
 	}
 }
