--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
-		"test": "jest --config ./jest.config.js",
+		"test": "react-scripts test --passWithNoTests --watchAll=false",
 		"eject": "react-scripts eject",
 		"prettier-check": "prettier --check src/**/*.ts{,x}",
 		"format": "prettier --write src/**/*.ts{,x}",
