--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"@types/react": "^16.9.0",
 		"@types/react-dom": "^16.9.0",
 		"@types/react-redux": "^7.1.7",
+		"axios": "^0.21.4",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-redux": "^7.2.0",
