--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		]
 	},
 	"devDependencies": {
+		"@types/react-router-dom": "^5.3.0",
 		"@typescript-eslint/eslint-plugin": "^4.31.0",
 		"@typescript-eslint/parser": "^4.31.0",
 		"eslint": "^7.32.0",
