--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"dependencies": {
 		"@material-ui/core": "^4.12.3",
 		"@material-ui/icons": "^4.11.2",
+		"@mui/material": "^5.0.1",
 		"@reduxjs/toolkit": "^1.5.1",
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.3.2",
