--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@emotion/react": "^11.4.1",
+		"@emotion/styled": "^11.3.0",
 		"@material-ui/core": "^4.12.3",
 		"@material-ui/icons": "^4.11.2",
 		"@mui/material": "^5.0.1",
+		"@mui/styles": "^5.0.1",
 		"@reduxjs/toolkit": "^1.5.1",
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.3.2",
