--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@emotion/styled": "^11.3.0",
 		"@material-ui/core": "^4.12.3",
 		"@material-ui/icons": "^4.11.2",
+		"@mui/icons-material": "^5.0.1",
 		"@mui/material": "^5.0.1",
 		"@mui/styles": "^5.0.1",
 		"@reduxjs/toolkit": "^1.5.1",
