--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
 		"@types/react-dom": "^16.9.0",
 		"@types/react-redux": "^7.1.7",
 		"axios": "^0.21.4",
+		"formik": "^2.2.9",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-redux": "^7.2.0",
+		"react-router-dom": "^5.3.0",
 		"react-scripts": "4.0.3",
 		"redux-saga": "^1.1.3",
 		"ts-jest": "^27.0.5",
@@ -54,6 +56,7 @@
 		]
 	},
 	"devDependencies": {
+		"@types/react-router-dom": "^5.3.0",
 		"@typescript-eslint/eslint-plugin": "^4.31.0",
 		"@typescript-eslint/parser": "^4.31.0",
 		"eslint": "^7.32.0",
