--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"dependencies": {
 		"@emotion/react": "^11.4.1",
 		"@emotion/styled": "^11.3.0",
+		"@monaco-editor/react": "^4.3.1",
 		"@mui/icons-material": "^5.0.1",
 		"@mui/material": "^5.0.1",
 		"@mui/styles": "^5.0.1",
@@ -19,12 +20,15 @@
 		"@types/react-redux": "^7.1.7",
 		"axios": "^0.21.4",
 		"formik": "^2.2.9",
+		"monaco-editor": "^0.28.1",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-markdown": "^7.0.1",
 		"react-redux": "^7.2.0",
 		"react-router-dom": "^5.3.0",
 		"react-scripts": "4.0.3",
 		"redux-saga": "^1.1.3",
+		"remark-gfm": "^3.0.0",
 		"ts-jest": "^27.0.5",
 		"ts-node": "^10.2.1",
 		"typescript": "~4.1.5"
