--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
 		"react-redux": "^7.2.0",
+		"react-rotating-text": "^1.4.1",
 		"react-scripts": "4.0.3",
 		"redux-saga": "^1.1.3",
 		"ts-jest": "^27.0.5",
