--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
 		"format-modules": "prettier --write src/pages/modules/**/*.ts{,x}",
 		"lint": "tsc --noEmit && eslint src/**/*.ts{,x}",
 		"lint-fix": "tsc --noEmit && eslint src/**/*.ts{,x} --fix",
-		"pre-pr": "npm run build && npm run format && npm run lint-fix && npm run test"
+		"pre-pr": "npm run format && npm run lint-fix && npm run test && npm run build"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
