--- a/package.json
+++ b/package.json
@@ -32,12 +32,13 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test --passWithNoTests --watchAll=false",
+		"test-modules": "react-scripts test ModulesPage.slice.spec.ts --watchAll=false",
 		"eject": "react-scripts eject",
 		"prettier-check": "prettier --check src/**/*.ts{,x}",
 		"format": "prettier --write src/**/*.ts{,x}",
 		"lint": "tsc --noEmit && eslint src/**/*.ts{,x}",
 		"lint-fix": "tsc --noEmit && eslint src/**/*.ts{,x} --fix",
-		"pre-pr": "npm run build && npm run format && npm run lint-fix && npm run test"
+		"pre-pr": "npm run format && npm run lint-fix && npm run test && npm run build"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
