--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"@codemirror/lang-markdown": "^0.19.1",
 		"@emotion/react": "^11.4.1",
 		"@emotion/styled": "^11.3.0",
 		"@mui/icons-material": "^5.0.1",
@@ -16,10 +17,12 @@
 		"@types/react": "^16.9.0",
 		"@types/react-dom": "^16.9.0",
 		"@types/react-redux": "^7.1.7",
+		"@uiw/react-codemirror": "^4.1.0",
 		"axios": "^0.21.4",
 		"formik": "^2.2.9",
 		"react": "^17.0.2",
 		"react-dom": "^17.0.2",
+		"react-markdown": "^7.0.1",
 		"react-redux": "^7.2.0",
 		"react-router-dom": "^5.3.0",
 		"react-scripts": "4.0.3",
