Landing Page + MUI Theming (#56)
* initial commit

* bg assets

* typography themes

* padding on navbar

* updated home panels

* updated navigation buttons

* added assets

* updated features layout

* added animations for topics

* palette changes

* added animated topic icons

* added footer placeholder

* updated footer

* fixed unused imports + footer height

* palette theme definition and feature component

Co-authored-by: Marc Diaz <33824219+marcgabe15@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^17.0.2",
     "react-markdown": "^7.0.1",
     "react-redux": "^7.2.0",
+    "react-rotating-text": "^1.4.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux-saga": "^1.1.3",
