--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.21.4",
     "date-fns": "^2.25.0",
     "formik": "^2.2.9",
+    "monaco-editor": "^0.28.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-markdown": "^7.0.1",
@@ -29,6 +30,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux-saga": "^1.1.3",
+    "remark-gfm": "^3.0.0",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "typescript": "~4.1.5"
