--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "date-fns": "^2.25.0",
     "formik": "^2.2.9",
     "monaco-editor": "^0.28.1",
+    "phosphor-react": "^1.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-markdown": "^7.0.1",
