--- a/package.json
+++ b/package.json
@@ -18,21 +18,24 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
+    "allotment": "^1.2.0",
     "axios": "^0.21.4",
     "date-fns": "^2.25.0",
     "formik": "^2.2.9",
     "monaco-editor": "^0.28.1",
     "phosphor-react": "^1.3.1",
     "react": "^17.0.2",
+    "react-collapse-pane": "^2.0.1",
     "react-dom": "^17.0.2",
     "react-markdown": "^7.0.1",
+    "react-perfect-scrollbar": "^1.5.8",
     "react-redux": "^7.2.0",
+    "react-resize-panel": "^0.3.5",
     "react-rotating-text": "^1.4.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux-saga": "^1.1.3",
     "remark-gfm": "^3.0.0",
-    "simplebar-react": "^2.3.6",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "typescript": "~4.1.5"
