--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
+    "allotment": "^1.2.0",
     "axios": "^0.21.4",
     "date-fns": "^2.25.0",
     "formik": "^2.2.9",
     "monaco-editor": "^0.28.1",
+    "phosphor-react": "^1.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-markdown": "^7.0.1",
