--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "allotment": "^1.2.0",
     "axios": "^0.21.4",
     "date-fns": "^2.25.0",
+    "draft-js": "^0.11.7",
+    "draft-js-export-html": "^1.4.1",
+    "draft.js": "^0.2.0",
     "formik": "^2.2.9",
     "monaco-editor": "^0.28.1",
     "phosphor-react": "^1.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-markdown": "^7.0.1",
     "react-redux": "^7.2.0",
     "react-rotating-text": "^1.4.1",
@@ -66,6 +70,8 @@
   },
   "devDependencies": {
     "@testing-library/react": "^9.5.0",
+    "@types/draft-js": "^0.11.9",
+    "@types/react-draft-wysiwyg": "^1.13.4",
     "@types/react-router-dom": "^5.3.0",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
