--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@monaco-editor/react": "^4.3.1",
     "@mui/icons-material": "^5.0.1",
     "@mui/lab": "^5.0.0-alpha.50",
@@ -25,6 +27,7 @@
     "draft-js-export-html": "^1.4.1",
     "draft.js": "^0.2.0",
     "formik": "^2.2.9",
+    "material-ui": "^0.20.2",
     "monaco-editor": "^0.28.1",
     "phosphor-react": "^1.3.1",
     "react": "^17.0.2",
@@ -35,11 +38,14 @@
     "react-rotating-text": "^1.4.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-select": "^5.2.2",
     "redux-saga": "^1.1.3",
     "remark-gfm": "^3.0.0",
+    "styled-components": "^5.3.5",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
