--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "allotment": "^1.2.0",
     "axios": "^0.21.4",
     "date-fns": "^2.25.0",
+    "file-saver": "^2.0.5",
     "formik": "^2.2.9",
+    "jszip": "^3.9.1",
     "monaco-editor": "^0.28.1",
     "phosphor-react": "^1.3.1",
     "react": "^17.0.2",
@@ -66,6 +68,7 @@
   },
   "devDependencies": {
     "@testing-library/react": "^9.5.0",
+    "@types/file-saver": "^2.0.5",
     "@types/react-router-dom": "^5.3.0",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
