--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "axios": "^0.21.4",
     "date-fns": "^2.25.0",
     "formik": "^2.2.9",
+    "framer-motion": "^6.2.10",
+    "interweave": "^13.0.0",
     "monaco-editor": "^0.28.1",
     "phosphor-react": "^1.3.1",
     "react": "^17.0.2",
