--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
     "@monaco-editor/react": "^4.3.1",
     "@mui/icons-material": "^5.0.1",
     "@mui/lab": "^5.0.0-alpha.50",
@@ -21,21 +23,29 @@
     "allotment": "^1.2.0",
     "axios": "^0.21.4",
     "date-fns": "^2.25.0",
+    "draft-js": "^0.11.7",
+    "draft-js-export-html": "^1.4.1",
+    "draft.js": "^0.2.0",
     "formik": "^2.2.9",
+    "material-ui": "^0.20.2",
     "monaco-editor": "^0.28.1",
     "phosphor-react": "^1.3.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draft-wysiwyg": "^1.14.7",
     "react-markdown": "^7.0.1",
     "react-redux": "^7.2.0",
     "react-rotating-text": "^1.4.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-select": "^5.2.2",
     "redux-saga": "^1.1.3",
     "remark-gfm": "^3.0.0",
+    "styled-components": "^5.3.5",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -66,6 +76,8 @@
   },
   "devDependencies": {
     "@testing-library/react": "^9.5.0",
+    "@types/draft-js": "^0.11.9",
+    "@types/react-draft-wysiwyg": "^1.13.4",
     "@types/react-router-dom": "^5.3.0",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
