--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
     "draft.js": "^0.2.0",
+    "draftjs-to-html": "^0.9.1",
     "formik": "^2.2.9",
     "material-ui": "^0.20.2",
     "monaco-editor": "^0.28.1",
