--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
+    "@types/markdown-pdf": "^9.0.1",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
@@ -22,6 +23,7 @@
     "axios": "^0.21.4",
     "date-fns": "^2.25.0",
     "formik": "^2.2.9",
+    "jspdf": "^2.5.1",
     "monaco-editor": "^0.28.1",
     "phosphor-react": "^1.3.1",
     "react": "^17.0.2",
@@ -32,7 +34,9 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "redux-saga": "^1.1.3",
+    "remark": "^14.0.2",
     "remark-gfm": "^3.0.0",
+    "strip-markdown": "^5.0.0",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "typescript": "~4.1.5"
