Updated peer dep

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,6 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ secrets.AWS_REGION }}
       - name: Build Edugator Staff Application
-        run: npm install && npm run build
+        run: npm install --legacy-peer-deps && npm run build
       - name: Deploy app build to S3 bucket
         run: aws s3 sync ./build/ s3://edugator.app --delete
