--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "formik": "^2.2.9",
     "framer-motion": "^6.2.10",
     "interweave": "^13.0.0",
+    "lottie-react": "^2.3.1",
     "material-ui": "^0.20.2",
     "monaco-editor": "^0.28.1",
     "phosphor-react": "^1.3.1",
