--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "typescript": "~4.1.5",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "zustand": "^4.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
