--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@mui/lab": "^5.0.0-alpha.50",
     "@mui/material": "^5.0.1",
     "@mui/styles": "^5.0.1",
-    "@reduxjs/toolkit": "^1.5.1",
+    "@reduxjs/toolkit": "^1.7.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
@@ -31,7 +31,6 @@
     "framer-motion": "^6.2.10",
     "interweave": "^13.0.0",
     "lottie-react": "^2.3.1",
-    "material-ui": "^0.20.2",
     "monaco-editor": "^0.28.1",
     "phosphor-react": "^1.3.1",
     "react": "^17.0.2",
@@ -41,7 +40,7 @@
     "react-redux": "^7.2.0",
     "react-rotating-text": "^1.4.1",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.2.2",
     "redux-saga": "^1.1.3",
     "remark-gfm": "^3.0.0",
@@ -63,9 +62,6 @@
     "lint-fix": "tsc --noEmit && eslint src/**/*.ts{,x} --fix",
     "pre-pr": "npm run format && npm run lint-fix && npm run test && npm run build"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -77,6 +73,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "overrides": {
+    "@svgr/webpack": "6.2.1"
   },
   "devDependencies": {
     "@testing-library/react": "^9.5.0",
