--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "@mui/lab": "^5.0.0-alpha.50",
     "@mui/material": "^5.0.1",
     "@mui/styles": "^5.0.1",
-    "@reduxjs/toolkit": "^1.5.1",
+    "@mui/system": "5.0.2",
+    "@reduxjs/toolkit": "^1.7.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
+    "@types/jest": "^27.0.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
@@ -31,7 +32,6 @@
     "framer-motion": "^6.2.10",
     "interweave": "^13.0.0",
     "lottie-react": "^2.3.1",
-    "material-ui": "^0.20.2",
     "monaco-editor": "^0.28.1",
     "phosphor-react": "^1.3.1",
     "react": "^17.0.2",
@@ -41,7 +41,7 @@
     "react-redux": "^7.2.0",
     "react-rotating-text": "^1.4.1",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "react-select": "^5.2.2",
     "redux-saga": "^1.1.3",
     "remark-gfm": "^3.0.0",
@@ -59,12 +59,9 @@
     "eject": "react-scripts eject",
     "prettier-check": "prettier --check src/**/*.ts{,x}",
     "format": "prettier --write src/**/*.ts{,x}",
-    "lint": "tsc --noEmit && eslint src/**/*.ts{,x}",
-    "lint-fix": "tsc --noEmit && eslint src/**/*.ts{,x} --fix",
+    "lint": "tsc --noEmit && eslint src/**/*.ts{,x} -c eslintrc.js --quiet",
+    "lint-fix": "tsc --noEmit && eslint src/**/*.ts{,x} -c eslintrc.js --fix",
     "pre-pr": "npm run format && npm run lint-fix && npm run test && npm run build"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": {
     "production": [
@@ -78,24 +75,27 @@
       "last 1 safari version"
     ]
   },
+  "overrides": {
+    "@svgr/webpack": "6.2.1"
+  },
   "devDependencies": {
     "@testing-library/react": "^9.5.0",
     "@types/draft-js": "^0.11.9",
     "@types/draftjs-to-html": "^0.8.1",
     "@types/react-draft-wysiwyg": "^1.13.4",
     "@types/react-router-dom": "^5.3.0",
-    "@typescript-eslint/eslint-plugin": "^4.31.0",
-    "@typescript-eslint/parser": "^4.31.0",
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-config-airbnb-typescript": "^14.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
+    "eslint": "^8.2.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-jest": "^24.4.0",
+    "eslint-plugin-jest": "^27.1.6",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.25.1",
-    "eslint-plugin-react-hooks": "^1.7.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "prettier": "^2.3.2"
   }
 }
