--- a/package.json
+++ b/package.json
@@ -33,27 +33,28 @@
     "interweave": "^13.0.0",
     "lottie-react": "^2.3.1",
     "monaco-editor": "^0.28.1",
+    "next": "^13.0.6",
     "phosphor-react": "^1.4.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "latest",
+    "react-dom": "latest",
     "react-draft-wysiwyg": "^1.14.7",
     "react-markdown": "^7.0.1",
     "react-redux": "^7.2.0",
     "react-rotating-text": "^1.4.1",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^5.0.1",
     "react-select": "^5.2.2",
     "redux-saga": "^1.1.3",
     "remark-gfm": "^3.0.0",
     "styled-components": "^5.3.5",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
-    "typescript": "~4.1.5",
+    "typescript": "4.9.3",
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "dev": "next dev",
+    "start": "next start",
+    "build": "next build",
     "test": "react-scripts test --passWithNoTests --watchAll=false",
     "test-modules": "react-scripts test ModulesPage.slice.spec.ts --watchAll=false",
     "eject": "react-scripts eject",
