--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ name: s3-deployment
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [release]
+    branches: [main]
 
 jobs:
   build:
