--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-redux": "^7.1.7",
     "allotment": "^1.2.0",
     "axios": "^0.21.4",
+    "buffer": "^6.0.3",
     "date-fns": "^2.25.0",
     "draft-js": "^0.11.7",
     "draft-js-export-html": "^1.4.1",
