--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^27.0.0",
     "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.2",
     "@types/react-redux": "^7.1.7",
     "allotment": "^1.2.0",
     "axios": "^0.21.4",
@@ -34,6 +34,7 @@
     "interweave": "^13.0.0",
     "lottie-react": "^2.3.1",
     "monaco-editor": "^0.28.1",
+    "next": "^12.3.4",
     "phosphor-react": "^1.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -42,27 +43,27 @@
     "react-redux": "^7.2.0",
     "react-rotating-text": "^1.4.1",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^5.0.1",
     "react-select": "^5.2.2",
     "redux-saga": "^1.1.3",
     "remark-gfm": "^3.0.0",
     "styled-components": "^5.3.5",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
-    "typescript": "~4.1.5",
+    "typescript": "~4.3.2",
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --passWithNoTests --watchAll=false",
-    "test-modules": "react-scripts test ModulesPage.slice.spec.ts --watchAll=false",
-    "eject": "react-scripts eject",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint-next": "next lint",
     "prettier-check": "prettier --check src/**/*.ts{,x}",
     "format": "prettier --write src/**/*.ts{,x}",
     "lint": "tsc --noEmit && eslint src/**/*.ts{,x} -c eslintrc.js --quiet",
     "lint-fix": "tsc --noEmit && eslint src/**/*.ts{,x} -c eslintrc.js --fix",
-    "pre-pr": "npm run format && npm run lint-fix && npm run test && npm run build"
+    "pre-pr": "npm run format && npm run lint-fix && npm run test && npm run build",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run buildGhPages"
   },
   "browserslist": {
     "production": [
@@ -97,6 +98,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.25.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "gh-pages": "^4.0.0",
     "prettier": "^2.3.2"
   }
 }
