--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
+    "react-hot-toast": "^2.4.0",
     "react-markdown": "^7.0.1",
     "react-redux": "^7.2.0",
     "react-rotating-text": "^1.4.1",
