--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
     "@types/react-redux": "^7.1.7",
-    "allotment": "^1.2.0",
+    "allotment": "^1.18.0",
     "axios": "^0.21.4",
     "buffer": "^6.0.3",
     "date-fns": "^2.25.0",
@@ -35,6 +35,7 @@
     "lottie-react": "^2.3.1",
     "monaco-editor": "^0.28.1",
     "next": "^12.3.4",
+    "next-transpile-modules": "^10.0.0",
     "phosphor-react": "^1.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -55,6 +56,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next export",
     "start": "next start",
     "lint-next": "next lint",
     "prettier-check": "prettier --check src/**/*.ts{,x}",
@@ -91,6 +93,7 @@
     "eslint": "^8.2.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-config-next": "13.1.6",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-jest": "^27.1.6",
