--- a/.github/workflows/ci-check-v2.yml
+++ b/.github/workflows/ci-check-v2.yml
@@ -15,8 +15,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Install packages
         run: npm install
-      # - name: Prettier Check
-      #   run: npm run lint
+      - name: Prettier Check
+        run: npm run lint
       # - name: Unit tests
       #   run: npm run test
       - name: build
