--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "interweave": "^13.0.0",
     "lottie-react": "^2.3.1",
     "monaco-editor": "^0.28.1",
+    "mui-chips-input": "^1.3.3",
     "next": "^12.3.4",
     "next-transpile-modules": "^10.0.0",
     "phosphor-react": "^1.4.1",
