--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/react-redux": "^7.1.7",
     "allotment": "^1.18.0",
     "axios": "^0.21.4",
+    "bootstrap": "^5.2.3",
     "buffer": "^6.0.3",
     "date-fns": "^2.25.0",
     "draft-js": "^0.11.7",
@@ -38,6 +39,7 @@
     "next-transpile-modules": "^10.0.0",
     "phosphor-react": "^1.4.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.7.2",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
     "react-hot-toast": "^2.4.0",
