--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "@mui/material": "^5.0.1",
     "@mui/styles": "^5.0.1",
     "@mui/system": "5.0.2",
+    "@radix-ui/react-accordion": "^1.1.0",
     "@radix-ui/react-aspect-ratio": "^1.0.1",
     "@radix-ui/react-dropdown-menu": "^2.0.3",
     "@radix-ui/react-icons": "^1.2.0",
     "@radix-ui/react-popover": "^1.0.4",
+    "@radix-ui/react-scroll-area": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.1",
     "@radix-ui/react-tooltip": "^1.0.4",
     "@reduxjs/toolkit": "^1.7.0",
