--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "lottie-react": "^2.3.1",
     "monaco-editor": "^0.28.1",
     "next": "^12.3.4",
+    "next-themes": "^0.2.1",
     "next-transpile-modules": "^10.0.0",
     "phosphor-react": "^1.4.1",
     "react": "^17.0.2",
