--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,3 @@
-// {
-// 	"compilerOptions": {
-// 		"target": "es5",
-// 		"lib": ["dom", "dom.iterable", "esnext", "es6"],
-// 		"noImplicitAny": true,
-// 		"noImplicitThis": true,
-// 		"strictNullChecks": true,
-// 		"allowJs": true,
-// 		"skipLibCheck": true,
-// 		"esModuleInterop": true,
-// 		"allowSyntheticDefaultImports": true,
-// 		"strict": true,
-// 		"forceConsistentCasingInFileNames": true,
-// 		"noFallthroughCasesInSwitch": true,
-// 		"module": "esnext",
-// 		"moduleResolution": "node",
-// 		"resolveJsonModule": true,
-// 		"isolatedModules": true,
-// 		"noEmit": true,
-// 		"jsx": "react-jsx"
-// 	},
-// 	"include": ["src"]
-// }
 {
   "compilerOptions": {
     "target": "es5",
@@ -37,7 +14,8 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "baseUrl": "."
+    "baseUrl": ".",
+    "allowSyntheticDefaultImports": true,
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"]
