Got initial zip file download to work

--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "draft-js-export-html": "^1.4.1",
     "draft.js": "^0.2.0",
     "draftjs-to-html": "^0.9.1",
+    "file-saver": "^2.0.5",
     "formik": "^2.2.9",
     "framer-motion": "^6.2.10",
     "interweave": "^13.0.0",
+    "jszip": "^3.10.1",
     "lottie-react": "^2.3.1",
     "monaco-editor": "^0.28.1",
     "next": "^12.3.4",
