--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "draft.js": "^0.2.0",
     "draftjs-to-html": "^0.9.1",
     "formik": "^2.2.9",
-    "framer-motion": "^6.2.10",
+    "framer-motion": "^6.5.1",
     "interweave": "^13.0.0",
     "lottie-react": "^2.3.1",
     "monaco-editor": "^0.28.1",
@@ -53,9 +53,10 @@
     "react-draft-wysiwyg": "^1.14.7",
     "react-hot-toast": "^2.4.0",
     "react-markdown": "^7.0.1",
+    "react-parallax-tilt": "^1.7.121",
     "react-redux": "^7.2.0",
     "react-rotating-text": "^1.4.1",
-    "react-select": "^5.2.2",
+    "react-text-transition": "^3.0.2",
     "redux-saga": "^1.1.3",
     "remark-gfm": "^3.0.0",
     "styled-components": "^5.3.5",
