--- a/.github/workflows/ci-check.yml
+++ b/.github/workflows/ci-check.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
     branches:
       - main
-      - release
+      - development
 
 jobs:
   test:
@@ -16,9 +16,9 @@ jobs:
         uses: actions/checkout@v2
       - name: Install packages
         run: npm install
-      - name: Prettier Check
-        run: npm run lint
-      - name: Unit tests
-        run: npm run test
+      # - name: Prettier Check
+      #   run: npm run lint
+      # - name: Unit tests
+      #   run: npm run test
       - name: build
         run: npm run build
