--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@mui/system": "5.0.2",
     "@radix-ui/react-accordion": "^1.1.0",
     "@radix-ui/react-aspect-ratio": "^1.0.1",
+    "@radix-ui/react-dialog": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.3",
     "@radix-ui/react-icons": "^1.2.0",
     "@radix-ui/react-popover": "^1.0.4",
     "@radix-ui/react-scroll-area": "^1.0.2",
+    "@radix-ui/react-select": "^1.2.1",
     "@radix-ui/react-switch": "^1.0.1",
     "@radix-ui/react-tabs": "^1.0.2",
     "@radix-ui/react-tooltip": "^1.0.4",
