--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@editorjs/code": "^2.8.0",
+    "@editorjs/editorjs": "^2.26.5",
+    "@editorjs/header": "^2.7.0",
+    "@editorjs/paragraph": "^2.9.0",
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
     "@material-ui/core": "^4.12.4",
@@ -40,6 +44,7 @@
     "draft-js-export-html": "^1.4.1",
     "draft.js": "^0.2.0",
     "draftjs-to-html": "^0.9.1",
+    "editorjs-html": "^3.4.2",
     "formik": "^2.2.9",
     "framer-motion": "^6.5.1",
     "interweave": "^13.0.0",
