--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-bootstrap": "^2.7.2",
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.14.7",
+    "react-dropdown": "^1.11.0",
     "react-hot-toast": "^2.4.0",
     "react-markdown": "^7.0.1",
     "react-redux": "^7.2.0",
