--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,5 +19,7 @@ jobs:
           aws-region: ${{ secrets.AWS_REGION }}
       - name: Build Edugator Staff Application
         run: npm install && npm run build && npm run export
+      - name: Move route manifest to out folder
+        run: mv ./.next/routes-manifest.json ./out/
       - name: Deploy app build to S3 bucket
         run: aws s3 sync ./out/ s3://edugator.app --delete
