--- a/package.json
+++ b/package.json
@@ -50,7 +50,14 @@
     "@reduxjs/toolkit": "^1.7.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/user-event": "^7.1.2",
+    "@tiptap/extension-bullet-list": "^2.0.3",
     "@tiptap/extension-color": "^2.0.2",
+    "@tiptap/extension-history": "^2.0.3",
+    "@tiptap/extension-link": "^2.0.3",
+    "@tiptap/extension-list-item": "^2.0.3",
+    "@tiptap/extension-ordered-list": "^2.0.3",
+    "@tiptap/extension-subscript": "^2.0.3",
+    "@tiptap/extension-superscript": "^2.0.3",
     "@tiptap/extension-text-style": "^2.0.2",
     "@tiptap/extension-underline": "^2.0.3",
     "@tiptap/pm": "^2.0.2",
