added new auth pages

--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "remark-gfm": "^3.0.0",
     "styled-components": "^5.3.5",
     "tabler-icons-react": "^1.56.0",
+    "tailwind-datepicker-react": "^1.4.0",
     "tailwindcss-radix": "^2.7.0",
     "tiptap-markdown": "^0.8.1",
     "ts-jest": "^27.0.5",
