added add students modal to roster page

--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "next": "^12.3.4",
     "next-themes": "^0.2.1",
     "next-transpile-modules": "^10.0.0",
+    "papaparse": "^5.4.1",
     "phosphor-react": "^1.4.1",
     "react": "^17.0.2",
     "react-animate-height": "^3.1.1",
@@ -147,6 +148,7 @@
     "@testing-library/react": "^9.5.0",
     "@types/draft-js": "^0.11.9",
     "@types/draftjs-to-html": "^0.8.1",
+    "@types/papaparse": "^5.3.7",
     "@types/react-draft-wysiwyg": "^1.13.4",
     "@types/react-router-dom": "^5.3.0",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
